# ai-talent-hub-speach

./: .gitignore  README.md  pyproject.toml
assigment_1/: dataset.py  main.py  melbanks.py  plot.py
assignment_1/: classifier.py  dataset.py  main.py  melbanks.py  plot.py  report.md  utils.py  сnn.py
assignment_2/: export_qualitative_examples.py  replot_task7b.py  report.md  run_experiments.py  run_remaining_tasks.py  wav2vec2decoder.py
assignment_2/results_full/: task1_task2_baseline.csv  task2_beam_width_sweep.csv  task3_temperature_sweep_librispeech.csv  task4_shallow_fusion_grid.csv  task6_qualitative_examples.csv  task6_qualitative_examples.md  task6_rescoring_grid.csv  task7_domain_shift_comparison.csv  task7b_temperature_earnings.csv  task9_lm_comparison.csv
assignment_2/results_remaining/: task5_3gram_vs_4gram.csv  task9_full_lm_comparison.csv
group_project_1/: report.md  requirements.txt
group_project_1/kaggle/: kaggle_inference.py  kaggle_training.py
group_project_1/scripts/: infer.py  make_arpa.py  make_lm_corpus.py  smoke_test.py  test_decoder.py  train.py  train_kenlm.py
group_project_1/src/: augment.py  dataset.py  decoder.py  features.py  model.py  text_norm.py
