[project]
name = "speach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.2",
    "ptflops>=0.7.5",
    "pytorch-lightning>=2.6.1",
    "soundfile>=0.13.1",
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchcodec>=0.10.0",
    "torchmetrics>=1.8.2",
]
